# d_c_arm_test

./: Dockerfile  FreeRTOSConfig.h  README.txt  aliases_for_picolibc.ld  arm_cortex_m3_cross.ini  arm_cortex_m4_cross.ini  baremetal_ldc2.conf  linker_script.ld  linker_script_arm.ld  linker_script_riscv32.ld  meson.build  meson_options.txt  riscv32_imc_cross.ini
.circleci/: config.yml
.github/workflows/: compilers.json  main.yml
ESP-IDF_demo_project/: CMakeLists.txt  README.md  create_d_binding.sh  fake_main.c  sdkconfig.defaults
ESP-IDF_demo_project/d_binding_creation/: create_d_binding.sh  fd_ignore.txt  importc.h
ESP-IDF_demo_project/main/: CMakeLists.txt  call_d_main.c  main.d
d/: meson.build
d/druntime_freertos_backend/: meson.build
d/freertos_dpp_bindings/: freertos.c  freertos.d  freertos.dpp
d/source/: app.d  arm_cortex_debug.d  libopencm3.d  martian.d
d/source/bindings/: freertos.dpp  gpio.dpp  libopencm3.dpp  types.d
d/source/drivers/: max7219.d
d/stm32_druntime_backend/libc/: config.d  errno.d  stdarg.d  stdatomic.d  stdint.d  stdio_.d  stdlib.d  time.d
hardware_interface/esp32c3/: meson.build
ld/: STM32F103C8Tx.ld
stm32_druntime_backend/libc/: errno.d  stddef.d  stdio_.d  stdlib.d
subprojects/: dfruntime.wrap  druntime.wrap  freertos.wrap  libopencm3.wrap  phobos.wrap  picolibc.wrap
subprojects/dpp/: dpp_helper.sh  meson.build
subprojects/libunwind/: meson.build
subprojects/packagefiles/freertos_changes/: meson.build  meson_options.txt
subprojects/packagefiles/freertos_changes/FreeRTOS-Kernel-10.3.1-kernel-only/: meson.build
subprojects/packagefiles/libopencm3_changes/: meson.build
subprojects/packagefiles/libopencm3_changes/ld/: linker.ld.S
subprojects/packagefiles/libopencm3_changes/mk/: gen-ldscript.mk
