freertos_druntime_backend = files(
    'external/core/abort.d',
#~     'external/core/condition.d',
    'external/core/event.d',
    'external/core/fiber.d',
    'external/core/gc.d',
    'external/core/memory.d',
    'external/core/mutex.d',
    'external/core/semaphore.d',
    'external/core/thread.d',
    'external/core/time.d',
#~     'external/core/types.d',
    'external/libc/errno.d',
#~     'external/libc/stdio_.d',
#~     'external/libc/stdlib.d',
#~     'external/libc/wchar_.d',
    'external/rt/config.d',
    'external/rt/dmain.d',
    'external/rt/monitor_.d',
    'external/rt/sections.d',
    'external/rt/sections_arm.d',
#~     'external/rt/sections_riscv32.d',
)
